Convert cert.gen. script to powershell
This unfortunately also involves encrypting the test certificate PFX files with "1234" as password. Apologies for this.

--- a/TestCertificates/.gitignore
+++ b/TestCertificates/.gitignore
@@ -1,7 +1,1 @@
-/TestRootCertificate.pfx
-/TestRootCertificate.srl
-
-/ClientCert.cer
-/ClientCert.pvk
-/localhost.cer
-/localhost.csr
+/localhost.pfx
