--- a/WebClientCpp/WebClientCpp.vcxproj.filters
+++ b/WebClientCpp/WebClientCpp.vcxproj.filters
@@ -2,5 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="WebClientCpp.cpp" />
+    <ClCompile Include="CertAccessWin32.cpp" />
   </ItemGroup>
 </Project>
