Rename sources for more consistent naming.

--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -75,7 +75,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CertAccessWin32.cpp" />
-    <ClCompile Include="WebClientCpp.cpp" />
+    <ClCompile Include="WebClient.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
