--- a/WebClientUwp/WebClientUwp.vcxproj.filters
+++ b/WebClientUwp/WebClientUwp.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="WebClientMSXML.cpp" />
-    <ClCompile Include="Main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="CertAccess.hpp" />
+    <ClCompile Include="WebClientWinRT.cpp" />
   </ItemGroup>
 </Project>
