--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -72,7 +72,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CertAccessWin32.cpp" />
+    <ClCompile Include="CertAccess.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WebClientWinRT.cpp" />
     <ClCompile Include="WebClientMSXML.cpp" />
