--- a/WebClientCpp/WebClientCpp.vcxproj.filters
+++ b/WebClientCpp/WebClientCpp.vcxproj.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="WebClientWinRT.cpp" />
-    <ClCompile Include="CertAccessWin32.cpp" />
+    <ClCompile Include="CertAccess.cpp" />
     <ClCompile Include="WebClientMSXML.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
