Move CertAccess classes to a separate header.

--- a/WebClientCpp/WebClientCpp.vcxproj.filters
+++ b/WebClientCpp/WebClientCpp.vcxproj.filters
@@ -6,4 +6,7 @@
     <ClCompile Include="WebClientMSXML.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CertAccess.hpp" />
+  </ItemGroup>
 </Project>
