--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -77,6 +77,9 @@
     <ClCompile Include="WebClientWinRT.cpp" />
     <ClCompile Include="WebClientMSXML.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CertAccess.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
