--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WebClientMSXML.cpp" />
+    <ClCompile Include="WebClientWinHttp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CertAccess.hpp" />
@@ -82,6 +83,5 @@
     <Midl Include="httprequest.idl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
