--- a/WebClientCpp/WebClientCpp.vcxproj.filters
+++ b/WebClientCpp/WebClientCpp.vcxproj.filters
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ClCompile Include="WebClientMSXML.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="WebClientWinHttp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CertAccess.hpp" />
