Add httprequest.idl from C:\Program Files (x86)\Windows Kits\10\Include\10.0.19041.0\um to the project.
Seem to be needed, since I'm not able to find and httprequest C++ header in the Windows SDK.

--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -78,6 +78,9 @@
   <ItemGroup>
     <ClInclude Include="CertAccess.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Midl Include="httprequest.idl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
