Add WinINet impl.
This isn't pretty, but it seem to get the job done.

--- a/WebClientCpp/WebClientCpp.vcxproj.filters
+++ b/WebClientCpp/WebClientCpp.vcxproj.filters
@@ -4,6 +4,7 @@
     <ClCompile Include="WebClientMSXML.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WebClientWinHttp.cpp" />
+    <ClCompile Include="WebClientWinINet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CertAccess.hpp" />
