--- a/WebClientCpp/WebClientCpp.vcxproj
+++ b/WebClientCpp/WebClientCpp.vcxproj
@@ -75,6 +75,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WebClientMSXML.cpp" />
     <ClCompile Include="WebClientWinHttp.cpp" />
+    <ClCompile Include="WebClientWinINet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CertAccess.hpp" />
