--- a/GetProxySettings/GetProxySettings.vcxproj
+++ b/GetProxySettings/GetProxySettings.vcxproj
@@ -76,6 +76,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ProxyStructs.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
