--- a/GetProxySettings/GetProxySettings.vcxproj.filters
+++ b/GetProxySettings/GetProxySettings.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ProxyStructs.hpp" />
+  </ItemGroup>
 </Project>
