Move impl. to a separate file.

--- a/GetProxySettings/GetProxySettings.vcxproj
+++ b/GetProxySettings/GetProxySettings.vcxproj
@@ -75,8 +75,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Proxyconfig.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ProxyConfig.hpp" />
     <ClInclude Include="ProxyStructs.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
