--- a/GetProxySettings/GetProxySettings.vcxproj.filters
+++ b/GetProxySettings/GetProxySettings.vcxproj.filters
@@ -2,8 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Proxyconfig.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyStructs.hpp" />
+    <ClInclude Include="ProxyConfig.hpp" />
   </ItemGroup>
 </Project>
