--- a/ProxyConfig/ProxyConfig.vcxproj
+++ b/ProxyConfig/ProxyConfig.vcxproj
@@ -74,7 +74,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Proxyconfig.cpp" />
+    <ClCompile Include="ProxyConfig.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyConfig.hpp" />
