--- a/ProxyConfig/ProxyConfig.vcxproj.filters
+++ b/ProxyConfig/ProxyConfig.vcxproj.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Proxyconfig.cpp" />
+    <ClCompile Include="ProxyConfig.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyStructs.hpp" />
