--- a/ProxyConfig/ProxyConfig.vcxproj.filters
+++ b/ProxyConfig/ProxyConfig.vcxproj.filters
@@ -3,9 +3,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ProxyConfig.cpp" />
+    <ClCompile Include="ProxySettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyStructs.hpp" />
     <ClInclude Include="ProxyConfig.hpp" />
+    <ClInclude Include="ProxySettings.hpp" />
   </ItemGroup>
 </Project>
