--- a/ProxyConfig/ProxyConfig.vcxproj
+++ b/ProxyConfig/ProxyConfig.vcxproj
@@ -75,11 +75,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ProxyConfig.cpp" />
-    <ClCompile Include="ProxySettings.cpp" />
+    <ClCompile Include="WinHTTPSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyConfig.hpp" />
-    <ClInclude Include="ProxySettings.hpp" />
+    <ClInclude Include="WinHTTPSettings.hpp" />
     <ClInclude Include="ProxyStructs.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
