--- a/ProxyConfig/ProxyConfig.vcxproj.filters
+++ b/ProxyConfig/ProxyConfig.vcxproj.filters
@@ -2,12 +2,12 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="ProxyConfig.cpp" />
+    <ClCompile Include="WinINetConfig.cpp" />
     <ClCompile Include="WinHTTPSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProxyStructs.hpp" />
-    <ClInclude Include="ProxyConfig.hpp" />
+    <ClInclude Include="WinINetConfig.hpp" />
     <ClInclude Include="WinHTTPSettings.hpp" />
   </ItemGroup>
 </Project>
